# nautilus-ideviceinfo

./: Makefile.am  README  autogen.sh  configure.ac  nautilus-ideviceinfo.doap
po/: LINGUAS  POTFILES.in  ar.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  (+2 more)
src/: Makefile.am  ideviceinfo-property-page.c  ideviceinfo-property-page.h  nautilus-afc2-warning-bar.c  nautilus-afc2-warning-bar.h  nautilus-ideviceinfo.c  nautilus-ideviceinfo.gresource.xml  nautilus-ideviceinfo.h  nautilus-ideviceinfo.ui  nautilus-idevinfo.c  rb-segmented-bar.c  rb-segmented-bar.h  test-property-tab.c  test.c
